--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 *.xcuserstate
 Appetizers App.xcodeproj/project.xcworkspace/xcuserdata/berkinkoca.xcuserdatad/UserInterfaceState.xcuserstate
+Appetizers App.xcodeproj/xcuserdata/berkinkoca.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
